@@ -1,30 +1,22 @@
 package io.ebeaninternal.server.query;
 
 import io.ebean.OrderBy;
-import io.ebeaninternal.api.BindParams;
-import io.ebeaninternal.api.CoreLog;
-import io.ebeaninternal.api.SpiExpressionList;
-import io.ebeaninternal.api.SpiQuery;
+import io.ebeaninternal.api.*;
+import io.ebeaninternal.server.bind.DataBind;
 import io.ebeaninternal.server.core.OrmQueryRequest;
-import io.ebeaninternal.server.deploy.BeanDescriptor;
-import io.ebeaninternal.server.deploy.BeanPropertyAssocMany;
 import io.ebeaninternal.server.deploy.DeployParser;
 import io.ebeaninternal.server.expression.DefaultExpressionRequest;
 import io.ebeaninternal.server.persist.Binder;
 import io.ebeaninternal.server.querydefn.OrmQueryProperties;
 import io.ebeaninternal.server.querydefn.OrmUpdateProperties;
 import io.ebeaninternal.server.rawsql.SpiRawSql;
-import io.ebeaninternal.server.bind.DataBind;
 import io.ebeaninternal.server.util.BindParamsParser;
 
 import java.sql.Connection;
 import java.sql.PreparedStatement;
 import java.sql.SQLException;
 import java.sql.Timestamp;
-import java.util.Collections;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 import static java.lang.System.Logger.Level.WARNING;
 
@@ -48,25 +40,13 @@ public final class CQueryPredicates {
   private final BindParams bindParams;
   private DefaultExpressionRequest filterMany;
   /**
-   * SQL generated from the where expressions.
-   */
-  private String filterManyExprSql;
-  /**
    * Bind values from the where expressions.
    */
   private DefaultExpressionRequest where;
   /**
-   * SQL generated from the where expressions.
-   */
-  private String whereExprSql;
-  /**
    * Bind values for having expression.
    */
   private DefaultExpressionRequest having;
-  /**
-   * SQL generated from the having expression.
-   */
-  private String havingExprSql;
   private String dbHaving;
   /**
    * logicalWhere with property names converted to db columns.
@@ -77,6 +57,7 @@ public final class CQueryPredicates {
    */
   private String dbFilterMany;
   private String dbOrderBy;
+  private String dbDistinctOn;
   private String dbUpdateClause;
   /**
    * Includes from where and order by clauses.
@@ -88,7 +69,7 @@ public final class CQueryPredicates {
     this.binder = binder;
     this.request = request;
     this.query = request.query();
-    this.bindParams = query.getBindParams();
+    this.bindParams = query.bindParams();
     this.idValue = query.getId();
   }
 
@@ -97,15 +78,15 @@ public final class CQueryPredicates {
   }
 
   public String bind(DataBind dataBind) throws SQLException {
-    OrmUpdateProperties updateProperties = query.getUpdateProperties();
+    OrmUpdateProperties updateProperties = query.updateProperties();
     if (updateProperties != null) {
       // bind the update set clause
       updateProperties.bind(binder, dataBind);
     }
     if (query.isVersionsBetween() && binder.isAsOfStandardsBased()) {
       // sql2011 based versions between timestamp syntax
-      Timestamp start = query.getVersionStart();
-      Timestamp end = query.getVersionEnd();
+      Timestamp start = query.versionStart();
+      Timestamp end = query.versionEnd();
       dataBind.append("between ").append(start).append(" and ").append(end);
       binder.bindObject(dataBind, start);
       binder.bindObject(dataBind, end);
@@ -149,7 +130,7 @@ public final class CQueryPredicates {
 
   private void buildUpdateClause(boolean buildSql, DeployParser deployParser) {
     if (buildSql) {
-      OrmUpdateProperties updateProperties = query.getUpdateProperties();
+      OrmUpdateProperties updateProperties = query.updateProperties();
       if (updateProperties != null) {
         dbUpdateClause = updateProperties.buildSetClause(deployParser);
       }
@@ -171,14 +152,14 @@ public final class CQueryPredicates {
     if (!buildSql && bindParams != null && bindParams.requiresNamedParamsPrepare()) {
       if (query.isNativeSql()) {
         // convert named params into positioned params
-        String sql = query.getNativeSql();
+        String sql = query.nativeSql();
         BindParamsParser.parse(bindParams, sql);
 
       } else if (query.isRawSql()) {
         // RawSql query hit cached query plan. Need to convert
         // named parameters into positioned parameters so that
         // the named parameters are bound
-        SpiRawSql.Sql sql = query.getRawSql().getSql();
+        SpiRawSql.Sql sql = query.rawSql().getSql();
         String s = sql.isParsed() ? sql.getPreWhere() : sql.getUnparsedSql();
         BindParamsParser.parse(bindParams, s);
       }
@@ -190,70 +171,49 @@ public final class CQueryPredicates {
     buildUpdateClause(buildSql, deployParser);
     buildBindWhereRawSql(buildSql);
 
-    SpiExpressionList<?> whereExp = query.getWhereExpressions();
+    if (buildSql) {
+      dbOrderBy = deriveOrderByWithMany(deployParser);
+      // create a copy of the includes required to support the orderBy
+      orderByIncludes = new HashSet<>(deployParser.includes());
+    }
+    SpiExpressionList<?> whereExp = query.whereExpressions();
     if (whereExp != null) {
       this.where = new DefaultExpressionRequest(request, deployParser, binder, whereExp);
       if (buildSql) {
-        whereExprSql = where.buildSql();
+        dbWhere = where.buildSql();
       }
     }
-    BeanPropertyAssocMany<?> manyProperty = request.determineMany();
+    SpiQueryManyJoin manyProperty = request.manyJoin();
     if (manyProperty != null) {
-      OrmQueryProperties chunk = query.getDetail().getChunk(manyProperty.name(), false);
-      SpiExpressionList<?> filterManyExpr = chunk.getFilterMany();
-      if (filterManyExpr != null) {
-        this.filterMany = new DefaultExpressionRequest(request, deployParser, binder, filterManyExpr);
-        if (buildSql) {
-          filterManyExprSql = filterMany.buildSql();
+      OrmQueryProperties chunk = query.detail().getChunk(manyProperty.path(), false);
+      if (chunk != null) {
+        SpiExpressionList<?> filterManyExpr = chunk.getFilterMany();
+        if (filterManyExpr != null) {
+          this.filterMany = new DefaultExpressionRequest(request, deployParser, binder, filterManyExpr);
+          if (buildSql) {
+            dbFilterMany = manyProperty.idNullOr(filterMany.buildSql());
+          }
         }
       }
     }
-    // having expression
-    SpiExpressionList<?> havingExpr = query.getHavingExpressions();
+    SpiExpressionList<?> havingExpr = query.havingExpressions();
     if (havingExpr != null) {
       this.having = new DefaultExpressionRequest(request, deployParser, binder, havingExpr);
       if (buildSql) {
-        havingExprSql = having.buildSql();
+        dbHaving = having.buildSql();
       }
     }
     if (buildSql) {
-      parsePropertiesToDbColumns(deployParser);
+      final String distinctOn = query.distinctOn();
+      if (distinctOn != null) {
+        dbDistinctOn = deployParser.parse(distinctOn);
+      }
+      predicateIncludes = deployParser.includes();
     }
   }
 
   /**
-   * Parse/Convert property names to database columns in the where and order by
-   * clauses etc.
-   */
-  private void parsePropertiesToDbColumns(DeployParser deployParser) {
-    // order by is dependent on the manyProperty (if there is one)
-    String logicalOrderBy = deriveOrderByWithMany(request.manyPropertyForOrderBy());
-    if (logicalOrderBy != null) {
-      dbOrderBy = deployParser.parse(logicalOrderBy);
-    }
-    // create a copy of the includes required to support the orderBy
-    orderByIncludes = new HashSet<>(deployParser.getIncludes());
-    dbWhere = deriveWhere(deployParser);
-    dbFilterMany = deriveFilterMany(deployParser);
-    dbHaving = deriveHaving(deployParser);
-    // all includes, including ones for manyWhere clause
-    predicateIncludes = deployParser.getIncludes();
-  }
-
-  private String deriveFilterMany(DeployParser deployParser) {
-    if (isEmpty(filterManyExprSql)) {
-      return null;
-    } else {
-      return deployParser.parse(filterManyExprSql);
-    }
-  }
-
-  private String deriveWhere(DeployParser deployParser) {
-    return parse(whereExprSql, deployParser);
-  }
-
-  /**
-   * Replace the table alias place holders.
+   * Replace the table alias place-holders.
    */
   void parseTableAlias(SqlTreeAlias alias) {
     if (dbWhere != null) {
@@ -270,65 +230,53 @@ public final class CQueryPredicates {
     if (dbOrderBy != null) {
       dbOrderBy = alias.parse(dbOrderBy);
     }
+    if (dbDistinctOn != null) {
+      dbDistinctOn = alias.parse(dbDistinctOn);
+    }
   }
 
-  private boolean isEmpty(String s) {
-    return s == null || s.isEmpty();
-  }
-
-  private String parse(String expr, DeployParser deployParser) {
-    if (expr == null) return "";
-    if (expr.isEmpty()) return expr;
-    return deployParser.parse(expr);
-  }
-
-  private String deriveHaving(DeployParser deployParser) {
-    return parse(havingExprSql, deployParser);
-  }
-
-  private String parseOrderBy() {
+  private String parseOrderBy(DeployParser parser) {
     OrderBy<?> orderBy = query.getOrderBy();
     if (orderBy == null) {
       return null;
     }
-    return CQueryOrderBy.parse(request.descriptor(), orderBy);
+    return CQueryOrderBy.parse(parser, request.descriptor(), orderBy);
   }
 
   /**
    * There is a many property we need to make sure the ordering is appropriate.
    */
-  private String deriveOrderByWithMany(BeanPropertyAssocMany<?> manyProp) {
-    if (manyProp == null) {
-      return parseOrderBy();
+  private String deriveOrderByWithMany(DeployParser parser) {
+    String orderBy = parseOrderBy(parser);
+    if (!request.includeManyJoin()) {
+      return orderBy;
     }
-    String orderBy = parseOrderBy();
-    BeanDescriptor<?> desc = request.descriptor();
-    String orderById = desc.defaultOrderBy();
+    String orderById = parser.parse(request.descriptor().defaultOrderBy());
     if (orderBy == null) {
       orderBy = orderById;
     }
     // check for default ordering on the many property...
+    SpiQueryManyJoin manyProp = request.manyJoin();
     String manyOrderBy = manyProp.fetchOrderBy();
     if (manyOrderBy != null) {
-      orderBy = orderBy + ", " + CQueryBuilder.prefixOrderByFields(manyProp.name(), manyOrderBy);
+      orderBy = orderBy + ", " + parser.parse(CQueryBuilder.prefixOrderByFields(manyProp.path(), manyOrderBy));
     }
     if (request.isFindById()) {
       // only one master bean so should be fine...
       return orderBy;
     }
-    if (orderBy.startsWith(orderById)) {
-      return orderBy;
-    }
     // more than one top level row may be returned so
     // we need to make sure their is an order by on the
     // top level first (to ensure master/detail construction).
-    int manyPos = orderBy.indexOf(manyProp.name());
-    int idPos = orderBy.indexOf(" " + orderById);
+    int idPos = orderBy.indexOf(orderById);
+    if (idPos == 0) {
+      return orderBy;
+    }
+    int manyPos = orderBy.indexOf("${" + manyProp.path() + "}");
     if (manyPos == -1) {
       // no ordering of the many
       if (idPos == -1) {
         // append the orderById so that master level objects are ordered
-        // even if the orderBy is not unique for the master object
         return orderBy + ", " + orderById;
       }
       // orderById is already in the order by clause
@@ -337,10 +285,10 @@ public final class CQueryPredicates {
     if (idPos == -1 || idPos >= manyPos) {
       if (idPos > manyPos) {
         // there was an error with the order by...
-        String msg = "A Query on [" + desc + "] includes a join to a 'many' association [" + manyProp.name()
-        + "] with an incorrect orderBy [" + orderBy + "]. The id property [" + orderById
-        + "] must come before the many property [" + manyProp.name() + "] in the orderBy."
-        + " Ebean has automatically modified the orderBy clause to do this.";
+        String msg = "A Query on [" + request.descriptor() + "] includes a join to a 'many' association [" + manyProp.path()
+          + "] with an incorrect orderBy [" + orderBy + "]. The id property [" + orderById
+          + "] must come before the many property [" + manyProp.path() + "] in the orderBy."
+          + " Ebean has automatically modified the orderBy clause to do this.";
         CoreLog.log.log(WARNING, msg);
       }
       // the id needs to come before the manyPropName
@@ -353,7 +301,20 @@ public final class CQueryPredicates {
    * Return the bind values for the where expression.
    */
   public List<Object> whereExprBindValues() {
-    return where == null ? Collections.emptyList() : where.getBindValues();
+    if (idValue == null && where == null) {
+      return Collections.emptyList();
+    }
+    if (where == null) {
+      return List.of(idValue);
+    }
+    if (idValue == null) {
+      return where.bindValues();
+    }
+
+    List<Object> bindValues = new ArrayList<>();
+    bindValues.add(idValue);
+    bindValues.addAll(where.bindValues());
+    return Collections.unmodifiableList(bindValues);
   }
 
   /**
@@ -389,6 +350,13 @@ public final class CQueryPredicates {
    */
   String dbOrderBy() {
     return dbOrderBy;
+  }
+
+  /**
+   * Return the db distinct on clause.
+   */
+  String dbDistinctOn() {
+    return dbDistinctOn;
   }
 
   /**
